feat: add optional ingredient codec
Signed-off-by: SettingDust <settingdust@gmail.com>