@@ -1,11 +1,8 @@
 package snownee.lychee.util.codec;
 
-import static snownee.lychee.util.recipe.LycheeRecipeSerializer.EMPTY_INGREDIENT;
-
-import java.util.function.Function;
+import java.util.Optional;
 
 import com.google.common.collect.Lists;
-import com.mojang.datafixers.util.Either;
 import com.mojang.datafixers.util.Pair;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.DataResult;
@@ -23,6 +20,10 @@ import net.minecraft.world.item.crafting.Ingredient;
 import snownee.lychee.mixin.IngredientAccess;
 
 public final class LycheeCodecs {
+	public static final Codec<Ingredient> OPTIONAL_INGREDIENT_CODEC =
+			ExtraCodecs.optionalEmptyMap(Ingredient.CODEC)
+					.xmap(it -> it.orElse(Ingredient.EMPTY), Optional::of);
+
 	public static final Codec<Ingredient> SINGLE_INGREDIENT_CODEC = Ingredient.Value.CODEC.flatComapMap(
 			IngredientAccess::construct,
 			it -> {
@@ -34,25 +35,21 @@ public final class LycheeCodecs {
 			});
 
 	public static final Codec<Pair<Ingredient, Ingredient>> PAIR_INGREDIENT_CODEC =
-			Codec.either(
-							ExtraCodecs.sizeLimitedList(ExtraCodecs.nonEmptyList(LycheeCodecs.SINGLE_INGREDIENT_CODEC.listOf()), 2),
-							LycheeCodecs.SINGLE_INGREDIENT_CODEC)
-					.xmap(it -> {
-						if (it.right().isPresent()) {
-							return Pair.of(it.right().get(), EMPTY_INGREDIENT);
-						}
-						var left = it.left().orElseThrow();
-						return Pair.of(left.get(0), left.size() > 1 ? left.get(1) : EMPTY_INGREDIENT);
-					}, it -> Either.left(Util.make(Lists.newArrayList(it.getFirst()), (list) -> {
-						if (!it.getSecond().isEmpty()) {
-							list.add(it.getSecond());
-						}
-					})));
+			ExtraCodecs.withAlternative(
+					ExtraCodecs.sizeLimitedList(ExtraCodecs.nonEmptyList(LycheeCodecs.SINGLE_INGREDIENT_CODEC.listOf()), 2)
+							.xmap(
+									it -> Pair.of(it.get(0), it.size() > 1 ? it.get(1) : Ingredient.EMPTY),
+									it -> Util.make(Lists.newArrayList(it.getFirst()), (list) -> {
+										if (!it.getSecond().isEmpty()) {
+											list.add(it.getSecond());
+										}
+									})),
+					LycheeCodecs.SINGLE_INGREDIENT_CODEC.xmap(it -> Pair.of(it, Ingredient.EMPTY), Pair::getFirst)
+			);
 
-	public static final Codec<ItemStack> PLAIN_ITEM_STACK_CODEC = Codec.either(
-					ItemStack.OPTIONAL_CODEC,
-					BuiltInRegistries.ITEM.holderByNameCodec().xmap(ItemStack::new, ItemStack::getItemHolder))
-			.xmap(it -> it.map(Function.identity(), Function.identity()), Either::left);
+	public static final Codec<ItemStack> PLAIN_ITEM_STACK_CODEC = ExtraCodecs.withAlternative(
+			ItemStack.OPTIONAL_CODEC,
+			BuiltInRegistries.ITEM.holderByNameCodec().xmap(ItemStack::new, ItemStack::getItemHolder));
 
 	public static final MapCodec<ItemStack> FLAT_ITEM_STACK_CODEC = RecordCodecBuilder.mapCodec(
 			instance -> instance.group(
